working on IE/Edge fixes, sorted object biographies alphabetically

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -209,7 +209,7 @@ header {
 			-webkit-transition: all 200ms ease-in;
 			-o-transition: all 200ms ease-in;
 			transition: all 200ms ease-in; 
-			overflow:scroll;
+			overflow:auto;
 			>ul {
 				width:100%;
 				height: 100%;
@@ -352,6 +352,7 @@ main {
 	overflow: auto;
 	padding-bottom: 60px;
 	min-height: 90vh;
+	display: block;
 }/* end MAIN */
 
 /**** FOOTER ****/
@@ -416,6 +417,10 @@ section#search {
 			outline: none;
 			border: 1px solid $lightgray;
 			font-family: 'M PLUS 1p', sans-serif;
+			// remove the default reset button
+			::-ms-clear {
+				display: none;
+			}
 			&::placeholder{
 				color: darken($lightgray,20%);
 				font-size: 1rem;
@@ -652,7 +657,7 @@ section#search {
 					color: white;
 					margin: 0;
 					list-style: none;
-					overflow: scroll;
+					overflow: auto;
 					position: relative;
 					h1 {
 						font-weight: 500;
@@ -867,7 +872,9 @@ section#search {
 					padding-bottom: 100%;
 					overflow: hidden;
 					position: relative;
-					z-index:-1;
+					//changed from -1 to 0 for Microsoft Edge
+					z-index: 0;
+					cursor: pointer;
 					img{
 						width: 100%;
 						height: auto;
